Fix display on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ img {
     border: 1px rgb(26, 31, 36) solid;
     width: 50%;
     height: auto;
-    position: absolute;
+    float: left;
     padding-left: 20px;
 }
 
@@ -54,14 +54,19 @@ img {
     font-size: 20px;
 }
 
-#desc1 > p, #desc1 > h2 {
-    transform: translateY(200px);
-}
-
-#desc2 > p, #desc2 > h2 {
-    transform: translateY(300px);
-}
-
 div {
     margin-bottom: 30%;
+}
+
+@media (max-width: 1000px) {
+    div {
+        display: flex;
+        flex-direction: column;
+    }
+    img {
+        width: 100%;
+    }
+    .imageDescription > p, .imageDescription > h2 {
+        padding-left: 5%;
+    }
 }
